--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -40,7 +40,7 @@ Prod {
   microservice {
     services {
       csp-partials {
-        host = csp-partials.protected.mdtp
+        host = csp-partials.public.mdtp
         port = 80
       }
     }
