--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -20,6 +20,7 @@ Dev {
         port = 8291
         refreshAfter = 10
         expireAfter = 60
+        template="hmrc7"
       }
     }
   }
@@ -32,6 +33,7 @@ Test {
         port = 8291
         refreshAfter = 10
         expireAfter = 60
+        template="hmrc7"
       }
     }
   }
@@ -42,6 +44,7 @@ Prod {
       csp-partials {
         host = csp-partials.public.mdtp
         port = 80
+        template="hmrc7"
       }
     }
   }
