DC-1573 new build

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -43,7 +43,8 @@ Prod {
     services {
       csp-partials {
         host = csp-partials.public.mdtp
-        port = 80
+        port = 443
+        protocol = https
         template="hmrc7"
       }
     }
